--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,9 +1,10 @@
 // Google Fonts
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&family=Nanum+Pen+Script&display=swap");
 
 // Font Variables
 $nanum: "Nanum Pen Script", "cursive";
+$gaegu: "Gaegu", "cursive";
 
-.intro_title {
-  font-family: $nanum;
-}
+// .intro_title {
+//   font-family: $gaegu;
+// }
