Add a brief intro to the Header component and create an About component

--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -8,3 +8,7 @@ $gaegu: "Gaegu", "cursive";
 // .intro_title {
 //   font-family: $gaegu;
 // }
+
+// .header_description {
+//   border: solid 1px black;
+// }
